--- a/index.html
+++ b/index.html
@@ -1039,7 +1039,7 @@
 
         document.addEventListener('DOMContentLoaded', function () {
             liff.init({
-                liffId: '2007397643-Mmm64enZ'
+                liffId: '2008375552-wKjxN383'
             }).then(() => {
                 console.log('LIFF初期化成功');
             }).catch((err) => {
