--- a/index.html
+++ b/index.html
@@ -1308,170 +1308,158 @@
             });
         });
 
-        const JP_WD = ['日', '月', '火', '水', '木', '金', '土'];
-        const pad = n => String(n).padStart(2, '0');
+const JP_WD = ['日', '月', '火', '水', '木', '金', '土'];
+const pad = n => String(n).padStart(2, '0');
 
-        function toISODateTimeLocal(dayStr, timeStr) {
-            if (!dayStr || !timeStr) return "";
-            return `${dayStr}T${timeStr}`;
+function toISODateTimeLocal(dayStr, timeStr) {
+    if (!dayStr || !timeStr) return "";
+    return `${dayStr}T${timeStr}`;
+}
+
+// 日付セレクト：今日から 'days' 日ぶんの候補を作る（日曜・土曜は除外）
+function buildDateOptions(selectEl, days = 120, startDate = new Date()) {
+    const d = new Date(startDate.getFullYear(), startDate.getMonth(), startDate.getDate());
+    selectEl.innerHTML = '<option value="" disabled selected>日付を選択</option>';
+
+    for (let i = 0; i < days; i++) {
+        const wd = d.getDay(); // 0=日曜 … 6=土曜
+
+        // ★日曜(0)と土曜(6)はスキップ
+        if (wd !== 0 && wd !== 6) {
+            const y = d.getFullYear();
+            const m = pad(d.getMonth() + 1);
+            const day = pad(d.getDate());
+            const value = `${y}-${m}-${day}`;
+            const label = `${y}/${m}/${day}（${JP_WD[wd]}）`;
+
+            const opt = document.createElement('option');
+            opt.value = value;
+            opt.textContent = label;
+            selectEl.appendChild(opt);
         }
 
-        // 日付セレクト：今日から 'days' 日ぶんの候補を作る（月曜・火曜は除外）
-        function buildDateOptions(selectEl, days = 120, startDate = new Date()) {
-            const d = new Date(startDate.getFullYear(), startDate.getMonth(), startDate.getDate());
-            selectEl.innerHTML = '<option value="" disabled selected>日付を選択</option>';
+        d.setDate(d.getDate() + 1);
+    }
+}
 
-            for (let i = 0; i < days; i++) {
-                const wd = d.getDay(); // 0=日曜 … 6=土曜
+// 営業時間設定（すべての平日 09:00〜17:30）
+const WEEKLY_HOURS = {
+    0: null, // 日曜スキップ
+    1: { start: 9, end: 17 }, // 月曜
+    2: { start: 9, end: 17 }, // 火曜
+    3: { start: 9, end: 17 }, // 水曜
+    4: { start: 9, end: 17 }, // 木曜
+    5: { start: 9, end: 17 }, // 金曜
+    6: null  // 土曜スキップ
+};
 
-                // ★月曜(1)と火曜(2)はスキップ
-                if (wd !== 1 && wd !== 2) {
-                    const y = d.getFullYear();
-                    const m = pad(d.getMonth() + 1);
-                    const day = pad(d.getDate());
-                    const value = `${y}-${m}-${day}`;
-                    const label = `${y}/${m}/${day}（${JP_WD[wd]}）`;
+// 指定曜日の12:00〜の休憩帯を除外（上限を含む）
+function isBlockedTime(weekday, h, m) {
+    const minutes = h * 60 + m;
+    // 平日（月〜金）：12:00 <= t <= 13:30
+    if (weekday >= 1 && weekday <= 5) {
+        if (minutes >= 12 * 60 && minutes <= 13 * 60 + 30) return true;
+    }
+    return false;
+}
 
-                    const opt = document.createElement('option');
-                    opt.value = value;
-                    opt.textContent = label;
-                    selectEl.appendChild(opt);
-                }
+// 時間セレクト生成（曜日ごと）
+function buildHalfHourOptions(selectEl, weekday) {
+    selectEl.innerHTML = '<option value="" disabled selected>時間を選択</option>';
 
-                d.setDate(d.getDate() + 1);
-            }
+    // ★土日なら時間なし
+    if (weekday === 0 || weekday === 6) return;
+
+    const { start, end } = WEEKLY_HOURS[weekday] || { start: 0, end: 0 };
+
+    for (let h = start; h <= end; h++) {
+        for (const m of [0, 30]) {
+            // ★17:30まで
+            if (h === end && m > 30) continue;
+            if (isBlockedTime(weekday, h, m)) continue;
+
+            const hh = pad(h);
+            const mm = pad(m);
+            const opt = document.createElement('option');
+            opt.value = `${hh}:${mm}`;
+            opt.textContent = `${hh}:${mm}`;
+            selectEl.appendChild(opt);
         }
+    }
+}
 
-        // 曜日ごとの営業時間設定（0=日曜, 1=月曜, …, 6=土曜）
-        const WEEKLY_HOURS = {
-            0: { start: 10, end: 16 }, // 日曜 10:00〜16:30
-            1: { start: 10, end: 18 }, // 月曜 10:00〜18:30
-            2: { start: 10, end: 18 }, // 火曜 10:00〜18:30
-            3: { start: 10, end: 18 }, // 水曜
-            4: { start: 10, end: 18 }, // 木曜
-            5: { start: 10, end: 18 }, // 金曜
-            6: { start: 10, end: 16 }  // 土曜 10:00〜16:30
-        };
+// hidden更新と表示用
+function updateHiddenAndPlaceholder(baseId) {
+    const day = document.getElementById(`${baseId}_day`).value;
+    const time = document.getElementById(`${baseId}_time`).value;
+    const hidden = document.getElementById(baseId);
+    const ph = document.getElementById(`placeholder${baseId.slice(-1)}`);
 
-        // 指定曜日の12:00〜の休憩帯を除外（上限を含む）
-        function isBlockedTime(weekday, h, m) {
-            const minutes = h * 60 + m;
+    hidden.value = day && time ? `${day}T${time}` : "";
 
-            // 平日（月〜金＝1..5）：12:00 <= t <= 13:30
-            if (weekday >= 1 && weekday <= 5) {
-                if (minutes >= 12 * 60 && minutes <= 13 * 60 + 30) return true;
-            }
+    if (ph) ph.style.display = hidden.value ? 'none' : '';
 
-            // 土日（日=0, 土=6）：12:00 <= t <= 13:00
-            if (weekday === 0 || weekday === 6) {
-                if (minutes >= 12 * 60 && minutes <= 13 * 60) return true;
-            }
+    if (typeof updateDisplayInfo === 'function') updateDisplayInfo();
+}
 
-            return false;
+// 既存 hidden の値（編集時）をセレクトへ復元
+function restoreIfAny(baseId) {
+    const hidden = document.getElementById(baseId);
+    if (!hidden.value) return;
+    const [d, t] = hidden.value.split('T');
+    const daySel = document.getElementById(`${baseId}_day`);
+    const timeSel = document.getElementById(`${baseId}_time`);
+
+    if (d && ![...daySel.options].some(o => o.value === d)) {
+        const tmp = document.createElement('option');
+        tmp.value = d; tmp.textContent = d.replaceAll('-', '/') + '（選択日）';
+        daySel.insertBefore(tmp, daySel.options[1]);
+    }
+    if (d) daySel.value = d;
+
+    if (t) {
+        const t5 = t.slice(0, 5);
+        if (d) {
+            const wd = new Date(d).getDay();
+            buildHalfHourOptions(timeSel, wd);
         }
-
-        // 時間セレクト生成（曜日ごと）
-        function buildHalfHourOptions(selectEl, weekday) {
-            selectEl.innerHTML = '<option value="" disabled selected>時間を選択</option>';
-
-            // 月曜・火曜は日付自体を出していないが、万一選ばれた場合は時間を出さない
-            if (weekday === 1 || weekday === 2) return;
-
-            const { start, end } = WEEKLY_HOURS[weekday] || { start: 0, end: 23 };
-
-            for (let h = start; h <= end; h++) {
-                for (const m of [0, 30]) {
-                    // ★休憩帯はスキップ（選択肢に出さない）
-                    if (isBlockedTime(weekday, h, m)) continue;
-
-                    const hh = pad(h);
-                    const mm = pad(m);
-                    const opt = document.createElement('option');
-                    opt.value = `${hh}:${mm}`;
-                    opt.textContent = `${hh}:${mm}`;
-                    selectEl.appendChild(opt);
-                }
-            }
+        if ([...timeSel.options].some(o => o.value === t5)) {
+            timeSel.value = t5;
         }
+    }
+}
 
-        // 既存の updateHiddenAndPlaceholder にこの1行を追加（表示用更新）
-        function updateHiddenAndPlaceholder(baseId) {
-            const day = document.getElementById(`${baseId}_day`).value;
-            const time = document.getElementById(`${baseId}_time`).value;
-            const hidden = document.getElementById(baseId);
-            const ph = document.getElementById(`placeholder${baseId.slice(-1)}`);
+function initPicker(baseId, dateDays = 120) {
+    const daySel = document.getElementById(`${baseId}_day`);
+    const timeSel = document.getElementById(`${baseId}_time`);
 
-            hidden.value = day && time ? `${day}T${time}` : "";
+    buildDateOptions(daySel, dateDays);
 
-            if (ph) ph.style.display = hidden.value ? 'none' : '';
+    timeSel.innerHTML = '<option value="" selected hidden>時間を選択</option>';
+    timeSel.classList.add('time-disabled');
 
-            // ★表示用パネルを即更新（存在すれば）
-            if (typeof updateDisplayInfo === 'function') updateDisplayInfo();
-        }
-
-        // 既存 hidden の値（編集時）をセレクトへ復元。日付は範囲外なら一時的に先頭へ追加
-        function restoreIfAny(baseId) {
-            const hidden = document.getElementById(baseId);
-            if (!hidden.value) return;
-            const [d, t] = hidden.value.split('T');
-            const daySel = document.getElementById(`${baseId}_day`);
-            const timeSel = document.getElementById(`${baseId}_time`);
-
-            if (d && ![...daySel.options].some(o => o.value === d)) {
-                const tmp = document.createElement('option');
-                tmp.value = d; tmp.textContent = d.replaceAll('-', '/') + '（選択日）';
-                daySel.insertBefore(tmp, daySel.options[1]); // 先頭のplaceholderの次に追加
-            }
-            if (d) daySel.value = d;
-
-            // 時間はブロック帯の場合、復元されない（選び直しになる）
-            if (t) {
-                const t5 = t.slice(0, 5);
-                // いったん時間候補を生成してから復元を試みる
-                if (d) {
-                    const wd = new Date(d).getDay();
-                    buildHalfHourOptions(timeSel, wd);
-                }
-                if ([...timeSel.options].some(o => o.value === t5)) {
-                    timeSel.value = t5;
-                }
-            }
-        }
-
-        function initPicker(baseId, dateDays = 120) {
-            const daySel = document.getElementById(`${baseId}_day`);
-            const timeSel = document.getElementById(`${baseId}_time`);
-
-            buildDateOptions(daySel, dateDays);
-
-            // 初期状態：まだ日付を選んでいないのでグレー＆非活性風
+    daySel.addEventListener('change', () => {
+        const dateVal = daySel.value;
+        if (dateVal) {
+            const d = new Date(dateVal);
+            const wd = d.getDay();
+            buildHalfHourOptions(timeSel, wd);
+            timeSel.classList.remove('time-disabled');
+        } else {
             timeSel.innerHTML = '<option value="" selected hidden>時間を選択</option>';
             timeSel.classList.add('time-disabled');
-
-            daySel.addEventListener('change', () => {
-                const dateVal = daySel.value;
-                if (dateVal) {
-                    const d = new Date(dateVal);
-                    const wd = d.getDay();
-                    buildHalfHourOptions(timeSel, wd);
-                    // 日付を選んだら有効化
-                    timeSel.classList.remove('time-disabled');
-                } else {
-                    // 日付を未選択に戻したら再びグレー＆非活性風
-                    timeSel.innerHTML = '<option value="" selected hidden>時間を選択</option>';
-                    timeSel.classList.add('time-disabled');
-                }
-                updateHiddenAndPlaceholder(baseId);
-            });
-
-            restoreIfAny(baseId);
-
-            timeSel.addEventListener('change', () => updateHiddenAndPlaceholder(baseId));
-            updateHiddenAndPlaceholder(baseId);
         }
+        updateHiddenAndPlaceholder(baseId);
+    });
 
-        // 3つ分を初期化
-        ['date1', 'date2', 'date3'].forEach(id => initPicker(id, 120));
+    restoreIfAny(baseId);
+
+    timeSel.addEventListener('change', () => updateHiddenAndPlaceholder(baseId));
+    updateHiddenAndPlaceholder(baseId);
+}
+
+// 3つ分を初期化
+['date1', 'date2', 'date3'].forEach(id => initPicker(id, 120));
 
         function selectSymptom(button, treatmentId) {
             // グローバルで用意されている前提の変数・関数：
@@ -1791,7 +1779,7 @@
             // LINEトークにメッセージを送信
             liff.sendMessages([{
                 type: 'text',
-                text: `【予約フォーム】\n《お名前》${formData.name}\n《電話番号》${formData.phone}\n《ご住所》${formData.zyuusyo}\n《ご来店回数》${formData.visitCount}\n\n《メニュー》\n・${formData.selectedSymptom}\n\n【希望日時】\n《第一希望日》\n${formatDate(formData.dates[0])}\n\n《第二希望日》\n${formatDate(formData.dates[1])}\n\n《第三希望日》\n${formatDate(formData.dates[2])}\n\n《メッセージ》\n${formData.message}`
+                text: `【予約フォーム】\n《お名前》${formData.name}\n《電話番号》${formData.phone}\n《ご来店回数》${formData.visitCount}\n《ご住所》\n⇒${formData.zyuusyo}\n\n《メニュー》\n・${formData.selectedSymptom}\n\n【希望日時】\n《第一希望日》\n${formatDate(formData.dates[0])}\n\n《第二希望日》\n${formatDate(formData.dates[1])}\n\n《第三希望日》\n${formatDate(formData.dates[2])}\n\n《メッセージ》\n${formData.message}`
             }]).then(() => {
                 /* メッセージ送信成功時の処理 */
                 alert('確認してご連絡差し上げます。');
